# movement-features-analysis

./: LICENSE  README.md  pyproject.toml  requirement.txt  requirements.txt
datas/: datas_test_feature_extraction.csv
features_extraction/: extract_features_from_data.py  features_calcul.py  features_computation.py  features_functions.py  spectral_features.py  time_domain_features.py
features_extraction/utils/: fourier.py  spectral_utils.py
scripts/: features_extraction_parralel.sh
